--- a/.github/workflows/process.yaml
+++ b/.github/workflows/process.yaml
@@ -1,8 +1,7 @@
 name: Process
 on:
   schedule:
-    - cron: "05 03 * * *"
-    - cron: "05 11 * * *"
+    - cron: "05 01 * * 1"
   workflow_dispatch:
 
 env:
